@@ -4,6 +4,9 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  id no longer crashes on systems without supplementary group support.
+  [bug introduced in coreutils-8.1]
+
   rm once again handles zero-length arguments properly.
   The rewrite to make rm use fts introduced a regression whereby
   a command like "rm a '' b" would fail to remove "a" and "b", due to
